# triangles

./: .gitmodules  CMakeLists.txt
ext/: CMakeLists.txt
shaders/ambient/: ambient.glslf  ambient.glslv
shaders/axes/: axes.glslf  axes.glslv
shaders/conic/: conic.glslf  conic.glslv
shaders/cubesphere/: cubesphere.glslg  cubesphere.glsltc  cubesphere.glslte  cubesphere.glslv
shaders/hsv/: hsv.glslf  hsv.glslv
shaders/icosphere/: icosphere.glslf  icosphere.glslg  icosphere.glsltc  icosphere.glslte  icosphere.glslv
shaders/identity/: identity.glslf  identity.glslv
shaders/lighting/: lighting.glslf  lighting.glslv
shaders/nesfont/: nesfont.glslf  nesfont.glslv
shaders/octamesh/: octamesh.glslv
shaders/raycastsphere/: raycastsphere.glslf  raycastsphere.glslv
shaders/shadow_volume/: shadow_volume.glslf  shadow_volume.glslg  shadow_volume.glslv
shaders/shadowmap/: shadowmap_light.glslf  shadowmap_light.glslv  shadowmap_shadow.glslv
shaders/simple/: simple.glslf  simple.glslv
shaders/skybox/: skybox.glslf  skybox.glslv
shaders/texview/: texview.glslf  texview.glslv
shaders/uvsphere/: uvsphere.glslf  uvsphere.glslv
shaders/wirecube/: wirecube.glslf  wirecube.glslv
src/: CMakeLists.txt  gldebug.c  main.c  nesfont.h  shader.c
